--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
         <div class="container team-container">
           <h2 class="section-title bottom">Наша команда</h2>
 
-          <ul class="team-flex list">
-            <li class="team-part">
+          <ul class="team-worker-list list">
+            <li class="team-worker-list__item">
               <picture>
                 <source srcset="./images/team/desktop/worker1-desktop.jpg 1x, ./images/team/desktop/worker1-desktop@2x.jpg 2x" media="(min-width: 1200px)" />
                 <source srcset="./images/team/tablet/worker1-tablet.jpg 1x, ./images/team/tablet/worker1-tablet@2x.jpg 2x" media="(min-width: 768px)" />
@@ -224,10 +224,10 @@
                 <h3 class="member__team-subtitle">Ігор Дем'яненко</h3>
                 <p lang="en" class="member__position">Product Designer</p>
               </div>
-              <div class="group-social-link">
+              <div class="group-social">
                 <ul class="team-social-list list">
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка інстраграму"
                         class="social-list-icon"
@@ -238,8 +238,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка твіттеру"
                         class="social-list-icon"
@@ -250,8 +250,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -262,8 +262,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -277,7 +277,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-part">
+            <li class="team-worker-list__item">
               <picture>
                 <source srcset="./images/team/desktop/worker2-desktop.jpg 1x, ./images/team/desktop/worker2-desktop@2x.jpg 2x" media="(min-width: 1200px)" />
                 <source srcset="./images/team/tablet/worker2-tablet.jpg 1x, ./images/team/tablet/worker2-tablet@2x.jpg 2x" media="(min-width: 768px)" />
@@ -291,8 +291,8 @@
               </div>
               <div class="group-social-link">
                 <ul class="team-social-list list">
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка інстраграму"
                         class="social-list-icon"
@@ -303,8 +303,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка твіттеру"
                         class="social-list-icon"
@@ -315,8 +315,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -327,8 +327,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -342,7 +342,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-part">
+            <li class="team-worker-list__item">
               <picture>
                 <source srcset="./images/team/desktop/worker3-desktop.jpg 1x, ./images/team/desktop/worker3-desktop@2x.jpg 2x" media="(min-width: 1200px)" />
                 <source srcset="./images/team/tablet/worker3-tablet.jpg 1x, ./images/team/tablet/worker3-tablet@2x.jpg 2x" media="(min-width: 768px)" />
@@ -356,8 +356,8 @@
               </div>
               <div class="group-social-link">
                 <ul class="team-social-list list">
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка інстраграму"
                         class="social-list-icon"
@@ -368,8 +368,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка твіттеру"
                         class="social-list-icon"
@@ -380,8 +380,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -392,8 +392,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -407,7 +407,7 @@
                 </ul>
               </div>
             </li>
-            <li class="team-part">
+            <li class="team-worker-list__item">
               <picture>
                 <source srcset="./images/team/desktop/worker4-desktop.jpg 1x, ./images/team/desktop/worker4-desktop@2x.jpg 2x" media="(min-width: 1200px)" />
                 <source srcset="./images/team/tablet/worker4-tablet.jpg 1x, ./images/team/tablet/worker4-tablet@2x.jpg 2x" media="(min-width: 768px)" />
@@ -421,8 +421,8 @@
               </div>
               <div class="group-social-link">
                 <ul class="team-social-list list">
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка інстраграму"
                         class="social-list-icon"
@@ -433,8 +433,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка твіттеру"
                         class="social-list-icon"
@@ -445,8 +445,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -457,8 +457,8 @@
                       </svg>
                     </a>
                   </li>
-                  <li class="team-list-items">
-                    <a href="#" class="social-link-icon team-icon">
+                  <li class="team-social-list__items">
+                    <a href="#" class="social-link team-icon">
                       <svg
                         aria-label="іконка фейсбуку"
                         class="social-list-icon"
@@ -479,17 +479,17 @@
 
       <!-- Clients -->
       <section class="our-clients">
-        <div class="container">
+        <div class="container clients-container">
           <h2 class="client-title bottom">Постійні клієнти</h2>
           <ul class="client-list list">
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg lang="en" aria-label="company namr YA and CO" width="106" height="60">
                   <use href="./images/icons.svg#icon-cleint-logo1"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg
                   lang="en"
@@ -502,28 +502,28 @@
                 </svg>
               </a>
             </li>
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg lang="en" aria-label="company" width="106" height="60">
                   <use href="./images/icons.svg#icon-cleint-logo3"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg lang="en" aria-label="company Foster Peters" width="106" height="60">
                   <use href="./images/icons.svg#icon-cleint-logo4"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg lang="en" aria-label="company Brand" width="106" height="60">
                   <use href="./images/icons.svg#icon-cleint-logo5"></use>
                 </svg>
               </a>
             </li>
-            <li class="client-link-item">
+            <li class="client-list__item">
               <a href="#" class="client-link">
                 <svg lang="en" aria-label="company Tag Line" width="106" height="60">
                   <use href="./images/icons.svg#icon-cleint-logo6"></use>
@@ -539,7 +539,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-      <div class="container footer-flex">
+      <div class="container footer-container">
         <div class="logo-contact">
           <a href="./index.html" class="logo">Web<span class="logo__accent_color_white">Studio</span></a>
           <address class="footer__adress">
@@ -554,10 +554,10 @@
                 >
               </li>
               <li class="footer-contact__item">
-                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="footer-contact__item">
-                <a class="contact-tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-contact-tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -565,8 +565,8 @@
         <div class="join-part">
           <p class="join__title">ПРИЄДНУЙТЕСЬ</p>
           <ul class="social-list list">
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg
                   aria-label="іконка інстраграму"
                   class="social-list-icon"
@@ -577,22 +577,22 @@
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка твіттеру" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter-footer"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка фейсбуку" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook-footer"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка лінкедін" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin-footer"></use>
                 </svg>
@@ -629,7 +629,7 @@
     <div class="backdrop is-hidden" data-modal>
       <!-- Modal window -->
       <div class="modal">
-        <button type="button" class="modal-close" data-modal-close>
+        <button type="button" class="modal-close-btn" data-modal-close>
           <svg
             aria-label="іконка закриття модального вікна"
             class="modal-close-icon"
@@ -641,9 +641,9 @@
         </button>
         <!-- Modal form -->
         <form class="modal-form">
-          <p class="modal-form-title">Залиште свої дані, ми вам передзвонимо</p>
+          <p class="modal-form__title">Залиште свої дані, ми вам передзвонимо</p>
           <label class="form-label">
-            <span class="form-label-desc">Ім'я</span>
+            <span class="form-label__desc">Ім'я</span>
             <span class="fill-form-wrapper">
               <input
                 type="text"
@@ -659,7 +659,7 @@
             </span>
           </label>
           <label class="form-label">
-            <span class="form-label-desc">Телефон</span>
+            <span class="form-label__desc">Телефон</span>
             <span class="fill-form-wrapper">
               <input
                 type="tel"
@@ -676,7 +676,7 @@
             </span>
           </label>
           <label class="form-label">
-            <span class="form-label-desc">Пошта</span>
+            <span class="form-label__desc">Пошта</span>
             <span class="fill-form-wrapper">
               <input type="email" class="form-input" name="user_email" required placeholder=" " />
               <svg aria-label="іконка конверту" class="input-icon mail" width="18" height="18">
@@ -685,7 +685,7 @@
             </span>
           </label>
           <label class="form-label-comments">
-            <span class="form-label-desc">Коментарі</span>
+            <span class="form-label__desc">Коментарі</span>
             <textarea
               name="user_comments"
               class="textarea-input"
