--- a/portfolio.html
+++ b/portfolio.html
@@ -319,7 +319,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <div class="container footer-flex">
+      <div class="container footer-container">
         <div class="logo-contact">
           <a href="./index.html" class="logo">Web<span class="logo__accent_color_white">Studio</span></a>
           <address class="footer__adress">
@@ -334,10 +334,10 @@
                 >
               </li>
               <li class="footer-contact__item">
-                <a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="footer-contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="footer-contact__item">
-                <a class="contact-tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="footer-contact-tel-link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </address>
@@ -345,8 +345,8 @@
         <div class="join-part">
           <p class="join__title">ПРИЄДНУЙТЕСЬ</p>
           <ul class="social-list list">
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg
                   aria-label="іконка інстраграму"
                   class="social-list-icon"
@@ -357,22 +357,22 @@
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка твіттеру" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter-footer"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка фейсбуку" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook-footer"></use>
                 </svg>
               </a>
             </li>
-            <li class="social-list-items">
-              <a href="#" class="social-link-icon">
+            <li class="social-list__items">
+              <a href="#" class="social-link">
                 <svg aria-label="іконка лінкедін" class="social-list-icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin-footer"></use>
                 </svg>
@@ -404,5 +404,12 @@
       </div>
     </footer>
     <!-- /Footer -->
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
